force-app/main/default/objects/Commute__c/Commute__c.object-meta.xml
<CustomObject>
    <label>Commute</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Commute No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>