force-app/main/default/objects/Commute__c/fields/CommuteDate__c.field-meta.xml
<CustomField>
    <fullName>CommuteDate__c</fullName>
    <label>Commute Date</label>
    <type>Date</type>
</CustomField>