force-app/main/default/objects/Commute__c/fields/CommuteType__c.field-meta.xml
<CustomField>
    <fullName>CommuteType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commute Type</label>
    <referenceTo>CommuteType__c</referenceTo>
    <relationshipLabel>Commute</relationshipLabel>
    <relationshipName>UmZ3</relationshipName>
    <type>Lookup</type>
</CustomField>