force-app/main/default/objects/Commute__c/fields/Reduce__c.field-meta.xml
<CustomField>
    <fullName>Reduce__c</fullName>
    <label>CO2 Emission Reduction (kgCO₂e)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>