force-app/main/default/objects/Commute__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CommuteType__c</columns>
    <columns>Emission__c</columns>
    <columns>Reduce__c</columns>
    <columns>CommuteDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Commutes</label>
</ListView>